--- a/index.html
+++ b/index.html
@@ -12,35 +12,13 @@
         <div class="hero-content">
             <h1>Vidya Sagar Avadutala</h1>
             <p>CAE Simulations · Electric Vehicles · Structural Mechanics</p>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="experience.html">Experience</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
     </header>
-    <main class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Visionary Mechanical Engineer with over 20 years of expertise in CAE simulations, product development, and optimization for electric vehicles, fuel cell systems, and advanced automotive applications.</p>
-        </section>
-        <section id="experience">
-            <h2>Experience Highlights</h2>
-            <ul>
-                <li><strong>Nikola Corporation:</strong> Led hydrogen fuel cell backpack development, reduced weight by 200 lbs/unit.</li>
-                <li><strong>Stellantis:</strong> Developed durability methodologies, published SAE technical paper.</li>
-                <li><strong>Design Through Simulation Co.:</strong> Delivered 20+ CAE seminars, built crash simulation methods for SIRIM.</li>
-            </ul>
-        </section>
-        <section id="projects">
-            <h2>Projects & Publications</h2>
-            <ul>
-                <li>US Patent (Pending): Vehicle fuel storage mounting system</li>
-                <li>SAE Paper: Vector Load Simplified Duty Cycle</li>
-                <li>Battery pack simulations and fatigue life predictions</li>
-            </ul>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:avadutala@gmail.com">avadutala@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/avadutala" target="_blank">linkedin.com/in/avadutala</a></p>
-            <p><a href="Vidya_Avadutala_Resume.pdf" target="_blank">Download Resume (PDF)</a></p>
-        </section>
-    </main>
 </body>
 </html>
