--- a/about.html
+++ b/about.html
@@ -1,6 +1,1 @@
-
-    <html><head><title>About</title><link rel="stylesheet" href="style.css"></head><body>
-    <div class="container"><h2>About Me</h2>
-    <p>Visionary Mechanical Engineer with over 20 years of expertise in CAE simulations, product development, and optimization for electric vehicles, fuel cell systems, and advanced automotive applications.</p>
-    </div></body></html>
-    
+<html><head><title>About – Vidya's Notebook</title><link rel='stylesheet' href='style.css'></head><body><header><img src='banner_final_14books.jpg'></header><nav><a href='index.html'>Home</a><a href='blog.html'>Blog</a><a href='books.html'>Books</a><a href='about.html'>About</a><a href='contact.html'>Contact</a></nav><main><h2>About Me</h2><p>I’m Vidya Sagar Avadutala – a mechanical engineer with 20+ years of experience in CAE simulations, EVs, and product development. I use this space to reflect on what I’ve learned and the books that continue to inspire me.</p></main><footer><p>&copy; <span id='year'></span> Vidya Sagar Avadutala – All Rights Reserved</p></footer><script>document.getElementById('year').textContent = new Date().getFullYear();</script></body></html>
