--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,1 @@
-
-    <html><head><title>Contact</title><link rel="stylesheet" href="style.css"></head><body>
-    <div class="container"><h2>Contact</h2>
-    <p>Email: <a href="mailto:vidya@avadutala.com">vidya@avadutala.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/avadutala" target="_blank">linkedin.com/in/avadutala</a></p>
-    <p><a href="Vidya_Avadutala_Resume.pdf" target="_blank">Download Resume (PDF)</a></p>
-    </div></body></html>
-    
+<html><head><title>Contact – Vidya's Notebook</title><link rel='stylesheet' href='style.css'></head><body><header><img src='banner_final_14books.jpg'></header><nav><a href='index.html'>Home</a><a href='blog.html'>Blog</a><a href='books.html'>Books</a><a href='about.html'>About</a><a href='contact.html'>Contact</a></nav><main><h2>Contact</h2><p>Email: <a href='mailto:vidya@avadutala.com'>vidya@avadutala.com</a></p><p>LinkedIn: <a href='https://www.linkedin.com/in/avadutala' target='_blank'>linkedin.com/in/avadutala</a></p></main><footer><p>&copy; <span id='year'></span> Vidya Sagar Avadutala – All Rights Reserved</p></footer><script>document.getElementById('year').textContent = new Date().getFullYear();</script></body></html>
