--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidya Sagar Avadutala</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="hero">
-        <div class="hero-content">
-            <h1>Vidya Sagar Avadutala</h1>
-            <p>CAE Simulations · Electric Vehicles · Structural Mechanics</p>
-            <nav>
-                <a href="about.html">About</a>
-                <a href="experience.html">Experience</a>
-                <a href="projects.html">Projects</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
-    </header>
-</body>
-</html>
+<html><head><title>Vidya's Notebook</title><link rel='stylesheet' href='style.css'></head><body><header><img src='banner_final_14books.jpg'></header><nav><a href='index.html'>Home</a><a href='blog.html'>Blog</a><a href='books.html'>Books</a><a href='about.html'>About</a><a href='contact.html'>Contact</a></nav><main><h2>Welcome!</h2><p>This is my space to explore engineering, EVs, simulations, and the books that shaped my thinking. I hope you enjoy reading as much as I enjoy sharing.</p></main><footer><p>&copy; <span id='year'></span> Vidya Sagar Avadutala – All Rights Reserved</p></footer><script>document.getElementById('year').textContent = new Date().getFullYear();</script></body></html>
